--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   /* root color variables */
   --bright-blue: #007bff;
   --nd-blue: #20364c;
-  --body-background: #f6f7fb;
+  --body-background: #f6f7fbd7;
   --ghost-white: ghostwhite;
   --alice-blue: aliceblue;
   --footer-slate: #e6e8f1;
